<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PerfilActivity">

    <include
        android:id="@+id/toolBarPerfil"
        layout="@layout/toolbar_no_elevation"/>

    <RelativeLayout
        android:id="@+id/perfil_tab"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:layout_below="@+id/toolBarPerfil">

        <!--<TextView-->
        <RelativeLayout
            android:id="@+id/rellay_perfil_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gradientStart">

            <com.alphanum.plenitud.alphanumkc.RoundedImageView
                android:id="@+id/img_perfil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/txt_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/img_perfil"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="20dp"
                android:text="@string/nome_perfil"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linlay_perfil_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/rellay_perfil_info"
            android:background="@drawable/background_title_perfil">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="DETALHES DE USUÁRIO"
                android:textColor="#6f6f6f"
                android:textSize="14sp"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay_perfil_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay_perfil_title"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="15dp"
                android:text="Email"
                android:textSize="14sp"
                android:textColor="#676767"
                android:fontFamily="sans-serif-light" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/email_perfil"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay_perfil_datanasc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay_perfil_email"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="Data de nascimento"
                android:textSize="14sp"
                android:textColor="#676767"
                android:fontFamily="sans-serif-light" />

            <TextView
                android:id="@+id/txt_datanasc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="XX/XX/XXXX"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay_perfil_telefone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay_perfil_datanasc"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="Telefone"
                android:textSize="14sp"
                android:textColor="#676767"
                android:fontFamily="sans-serif-light" />

            <TextView
                android:id="@+id/txt_telefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/telefone_perfil"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay_perfil_pontos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linlay_perfil_telefone"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:text="Saldo"
                android:textSize="14sp"
                android:textColor="#676767"
                android:fontFamily="sans-serif-light" />

            <TextView
                android:id="@+id/txt_pontos_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="200"
                android:textSize="16sp"
                android:fontFamily="sans-serif-light"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>