<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".MainActivity">
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">
        
        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:src="@drawable/ic_logo"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:id="@+id/rellay1"
            android:visibility="gone"
            android:layout_below="@+id/imgView_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/edtEmailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:background="@drawable/et_bg"
                        android:text="@string/edt_email_main"
                        android:textColorHint="@color/white"
                        android:inputType="textEmailAddress"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/edtSenhaLogin"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:background="@drawable/et_bg"
                        android:text="@string/edt_senha_main"
                        android:textColorHint="@color/white"
                        android:inputType="textPassword"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/linlay1"
                android:text="@string/btn_entrar_main"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-light"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:textAllCaps="true"/>

            <FrameLayout
                android:id="@+id/frameFacebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnEntrar">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/btnFacebook"
                    android:layout_width="match_parent"
                    android:layout_marginTop="5dp"
                    android:layout_height="45dp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btnFacebookLayout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="Entrar com facebook"
                    android:background="@drawable/btnface_bg"
                    android:textColor="@color/white"
                    android:fontFamily="sans-serif-light"
                    android:textSize="15sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:textAllCaps="true"
                    android:drawableLeft="@drawable/ic_facebook_logo"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp" />

            </FrameLayout>

            <FrameLayout
                android:id="@+id/frameGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/frameFacebook">

                <com.google.android.gms.common.SignInButton
                    android:id="@+id/btnGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"/>

                <Button
                    android:id="@+id/btnGoogleLayout"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/btngoogle_bg"
                    android:text="Entrar com google"
                    android:textColor="@color/black"
                    android:fontFamily="sans-serif-light"
                    android:textSize="15sp"
                    android:layout_centerHorizontal="true"
                    android:textAllCaps="true"
                    android:drawableLeft="@drawable/ic_google_logo"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"/>

            </FrameLayout>



        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:visibility="gone">

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="Cadastre-se"
            android:textColor="@color/white"
            android:textAllCaps="true"/>

        <Button
            android:id="@+id/btnEsqueciSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="Esqueceu a senha?"
            android:textColor="@color/white"
            android:textAllCaps="true"/>

    </RelativeLayout>

</RelativeLayout>